Fix flash and footer position on mobile

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -18,12 +18,12 @@ $approved-color: #08A510;
 body {
     position: relative;
     min-height: 80vh;
-    background-color: #FAFAFA;
+    background-color: #F4F4F4;
 }
 
 body.logged_out{
     min-height: 100vh;
-    background-color: #FAFAFA;
+    background-color: #F4F4F4;
 }
 
 img {
